<resources>
    <string name="app_name">Easy Video Compressor</string>
    <string name="head_note">Power by Light Compressor</string>
    <string name="very_low">Very Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="very_high">Very High</string>
    <string name="s_q">Select Compression Quality:</string>
    <string name="low">Low</string>
    <string name="start_compress">Start Compress</string>
    <string name="cancel">Cancel</string>
    <string name="select_file">Select File</string>

</resources>